excel billing download improvements - Booth number with location name instead of id - download filename changed to Buchungen - Address field with text wrapping - refactor: streamline code and improve readability in AdminDashboardService and ExcelService